Fix bug where body would sometimes be offcenter on mobile

--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,13 @@
     
 }
 body {
+    position: fixed;
     background-color: rgb(0, 0, 0);
     overflow: hidden;
     height: 100vh;
+    top: 0px;
+    left: 0px;
+
 }
 
 .hud{
